# kos-framework

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
agent/: README.md  package-lock.json  package.json  tsconfig.json
agent/docs/: 00_Agent与Harness基础.md  01_定位与边界.md  02_总体架构.md  03_Pi工具与扩展设计.md  04_权限与交互协议.md  05_强绑定与开放边界.md  06_产品体验与社区复用.md  07_Vault能力迁移计划.md
agent/scripts/: live-rpc-smoke.mjs  live-web-fetch.mjs  live-web-search.mjs
agent/upstream/: README.md  pi.json
dev/docs/: H1H2目标驱动推进体系操作需求.md  LLM工作流与确定性写入边界.md  Layout_v2目录迁移.md  LiveSync与R2设备同步方案.md  Obsidian看板二期优化.md  Pi驱动kos-test.md  Process Eval与Agent Trace.md  README.md  Skill机制设计.md  Skill评估两层模型.md  kos项目面试问答与压力测试.md  个性化协作与每日推荐优化.md  原公开仓库文档归档.md  文档编写总纲.md  目标驱动的个人推进体系设计.md  自举与维护边界.md
dev/harness/: build_ob_plugin_release.mjs  compare_vault.py  framework_sync.py  init_vault.py  kos_test.py  process_eval_common.py  run_process_evals.py  scan_sensitive.py  sync_to_vault.py  validate_core_evals.py  validate_distribution.py  validate_process_evals.py
dev/specs/: distribution-manifest.yaml
dev/tests/: test_init.py  test_kos_test.py  test_process_evals.py  test_scan_sensitive.py  test_skill_eval_runner.py  test_sync.py  test_task_evals.py
ob-plugin/: README.md  THIRD_PARTY_NOTICES.md  esbuild.config.mjs  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
ob-plugin/docs/: 01_功能规格.md  02_技术方案.md  03_指标定义.md  04_看板产品与交互设计需求.md
vault/: .hermes.md  .kos.md  AGENTS.md  CLAUDE.md  README.md
(+222 files in other folders)
